--- a/tournamenttracker/templates/layout.html
+++ b/tournamenttracker/templates/layout.html
@@ -23,12 +23,13 @@
         <title>Tortle</title>
     {% endif %}
     <!-- favicon -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='logo/tortle_green.png') }}">
 </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
+            <span class="navbar-icon"> <img src="{{ url_for('static', filename='logo/tortle.png') }}" style="width:50px;height:50px;"> </span>
           <a class="navbar-brand mr-4" href="/">Tortle</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
